[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://art/ui/backgrounds/bg_space.png" type="Texture" id=2]
[ext_resource path="res://scenes/GameStartMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/SettingsMenu.tscn" type="PackedScene" id=4]

[node name="GameMenu" type="Control"]
margin_left = -3.0
margin_right = 37.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="GameStartMenu" parent="." instance=ExtResource( 3 )]
offset = Vector2( 576, 0 )
transform = Transform2D( 1, 0, 0, 1, 576, 0 )

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]
offset = Vector2( 576, 0 )
transform = Transform2D( 1, 0, 0, 1, 576, 0 )

[connection signal="learn_button_pressed" from="GameStartMenu" to="." method="_on_GameStartMenu_learn_button_pressed"]
[connection signal="play_button_pressed" from="GameStartMenu" to="." method="_on_GameStartMenu_play_button_pressed"]
[connection signal="settings_button_pressed" from="GameStartMenu" to="." method="_on_GameStartMenu_settings_button_pressed"]
[connection signal="back_button" from="SettingsMenu" to="." method="_on_SettingsMenu_back_button"]
